z-index issue

--- a/style.css
+++ b/style.css
@@ -37,6 +37,14 @@ h2 {
     text-align: center;
 }
 
+h3 {
+    font-size: 24px;
+}
+
+p {
+    line-height: 1.5;
+}
+
 button {
     cursor: pointer;
 }
@@ -94,7 +102,7 @@ button:active {
     text-decoration: none;
 }
 
-/* 
+/*
 LANDING
  */
 
@@ -111,6 +119,7 @@ header {
     max-width: 720px;
     margin: 0 auto;
     height: 100%;
+    padding-top: 24px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -120,4 +129,115 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.header__img--wrapper {
+    padding: 20px;
+    z-index: 2;
+}
+.header__image {
+    height: 100%;
+    max-height: 45vh;
+    padding: 20px;
+}
+
+.container {
+padding: 56px 0;
+}
+
+.row {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+/*
+HIGHLIGHTS
+ */
+#highlights {
+    position: relative;
+}
+
+#highlights:before {
+    background: url('assets/wave.svg');
+    content: "";
+    position: absolute;
+    top: 1px;
+    left: 0;
+    transform: translateY(-100%);
+    width: 101vw;
+    height: 12vw;
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: 1;
+}
+
+#higlights:after {
+    background: url('assets/wave.svg');
+    content: "";
+    position: absolute;
+    top: 1px;
+    left: 0;
+    transform: translateY(100%);
+    width: 101vw;
+    height: 12vw;
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: 1;
+}
+
+.highlight {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+ .highlight__wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ }
+
+ .highlights {
+    padding: 0 24px;
+    width: calc(100% / 3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+ }
+
+ .highlight__para {
+    text-align: center;
+    font-size: 12px;
+    max-width: 240px;
+ }
+
+ .highlight__img {
+    border: 2px solid #7342d65d;
+    color: #7342d6;
+    width: 80px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    font-size: 24px;
+    margin-bottom: 24px;
+ }
+
+ .highlight__subtitle {
+    font-size: 16px;
+    margin-bottom: 16px;
+ }
+
+/* 
+
+FEATURES
+
+*/
+
+#features {
+    background-color: rgba(115, 66, 214, 0.1);
 }
